Исправления по фидбэку: README, error handling, .gitignore, nil check
  Исправлены все 10 пунктов фидбэка:

  1. README.md - полностью переписан с архитектурой и диаграммами
  2. Импорты - отформатированы по стандарту Go
  3. Обработка ошибок - исправлена во всех местах
  4. Graceful shutdown - реализован (main.go:115-143)
  5. Конфигурация - вынесена в config/config.go
  6. log.Fatal → log.Fatalf - исправлено
  7. Генератор данных - реализован (cmd/generator)
  8. LRU кэш с инвалидацией - реализован (internal/cache)
  9. Интерфейсы и моки - реализованы (internal/interfaces)
  10. Валидация данных - полная реализация (internal/validator)

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,62 @@
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+bin/
+dist/
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool
+*.out
+coverage.out
+coverage.html
+
+# Profiling files
+*.prof
+*.pprof
+cpu.prof
+mem.prof
+
+# Dependency directories
+vendor/
+
+# Go workspace file
+go.work
+
+# IDEs and editors
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Environment variables and local config
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+
+# Temporary files
+tmp/
+temp/
+
+# OS files
+Thumbs.db
+.DS_Store
+
+# Project specific
 GEMINI.md
+CLAUDE.md
+JUNIOR_GUIDE.md
+TESTING.md
+
+# Build artifacts
+*.tar.gz
+*.zip
